# libschifra

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile
examples/: CMakeLists.txt  schifra_reed_solomon_threads_example01.cpp  schifra_reed_solomon_threads_example02.cpp
include/: schifra_reed_solomon_decoder.hpp  schifra_reed_solomon_encoder.hpp
tests/: CMakeLists.txt
